Add Count rows endpoint
